Updating Assessment_1 Rmd & html files and adding Image folder

--- a/Assessment_1.html
+++ b/Assessment_1.html
@@ -446,6 +446,7 @@ kable(variable_names_table, caption = &quot;Table of column names&quot;)</code><
 </div>
 <div id="section-4-data-set-description" class="section level3">
 <h3>Section 4: Data Set Description</h3>
+<p>The data set has 787 observatinos and 5 variables.</p>
 </div>
 
 
