--- a/Assessment_1.html
+++ b/Assessment_1.html
@@ -599,6 +599,9 @@ increase, especially between 0 and 60000 GDP per capita</em></em></li>
 old and 60000 GDP per capita</em></em></li>
 </ul>
 </div>
+<div id="section-7-conclusions" class="section level3">
+<h3>Section 7: Conclusions</h3>
+</div>
 
 
 
