Updating main branch with sentences for data summary observations

--- a/Assessment_1.html
+++ b/Assessment_1.html
@@ -581,6 +581,11 @@ by country</caption>
 </tr>
 </tbody>
 </table>
+<p>The summary table above shows a general trend where GDP per capita
+tends to <strong>increase</strong> with average life expectancy.
+However, this pattern is not always true, as some countries with lower
+GDP per capita exhibit higher life expectancy than those with higher GDP
+per capita— one example of this woudl be Central African Republic.</p>
 <pre class="r"><code># select GDP, Country and Population variables from dataset 
 comparison_data &lt;- LifeExp_data %&gt;% 
   select(
@@ -766,6 +771,11 @@ Expectancy and population in each country</caption>
 </tr>
 </tbody>
 </table>
+<p>In this second table, we can observe the changes in GDP per capita,
+population and life expectancy over time. From this table (showing only
+the first 20 rows), we can see that as we move through each snap shot in
+time, GDP per capita seems to be increasing, as does population and and
+life expectancy in most cases.</p>
 </div>
 <div id="section-6-visualisations" class="section level3">
 <h3>Section 6: Visualisations</h3>
